# glcli

./: .gitignore  README.md  config.toml.template  pyproject.toml
glcli/: cli.py
src/: action.py  adapter.py  adapters.py  cli.py  client.py  config.py  dispatcher.py  explorer.py  fzf.py  handlers.py  main.py  runner.py  utils.py
src/apis/: __init__.py  base.py  projects.py  registry.py
